# ruclouds

./: .gitignore  404.html  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: release.yml
api/: index.html
changelog/: index.html
code-structure/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  changelog.md  code-structure.md  configuration.md  contributing.md  index.md  installation.md
installation/: index.html
search/: search_index.json
src/: actions.rs  app.rs  config.rs  input.rs  main.rs
src/render/: buffer.rs  halfblock.rs  mod.rs  palette.rs
src/sim/: mod.rs  noise_field.rs  wind.rs
src/term/: capability.rs  guard.rs  mod.rs
