[package]
name = "ruclouds"
version = "0.5.0"
edition = "2021"
description = "Animated terminal clouds using noise-field simulation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndyFerns/ruclouds"
documentation = "https://andyferns.github.io/ruclouds/"
homepage = "https://andyferns.github.io/ruclouds/"

keywords = [ "terminal", "animation", "clouds", "cli", "ansi" ] 
categories = [ "command-line-utilities", "graphics" ] 
exclude = [ ".github/", "docs/", "assets/", "mkdocs.yml" ]

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
noise = "0.9"
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
